syntax = "proto3";
package pstake.liquidstake.v1beta1;

import "google/api/annotations.proto";
import "pstake/liquidstake/v1beta1/liquidstake.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/persistenceOne/persistenceCore/v16/x/liquidstake/types";

// Query defines the gRPC query service for the liquidstake module.
service Query {
  // Params returns parameters of the liquidstake module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/pstake/liquidstake/v1beta1/params";
  }

  // LiquidValidators returns liquid validators with states of the liquidstake
  // module.
  rpc LiquidValidators(QueryLiquidValidatorsRequest)
      returns (QueryLiquidValidatorsResponse) {
    option (google.api.http).get = "/pstake/liquidstake/v1beta1/validators";
  }

  // States returns states of the liquidstake module.
  rpc States(QueryStatesRequest) returns (QueryStatesResponse) {
    option (google.api.http).get = "/pstake/liquidstake/v1beta1/states";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryLiquidValidatorsRequest is the request type for the
// Query/LiquidValidators RPC method.
message QueryLiquidValidatorsRequest {}

// QueryLiquidValidatorsResponse is the response type for the
// Query/LiquidValidators RPC method.
message QueryLiquidValidatorsResponse {
  repeated LiquidValidatorState liquid_validators = 1
      [ (gogoproto.nullable) = false ];
}

// QueryStatesRequest is the request type for the Query/States RPC method.
message QueryStatesRequest {}

// QueryStatesResponse is the response type for the Query/States RPC method.
message QueryStatesResponse {
  NetAmountState net_amount_state = 1 [ (gogoproto.nullable) = false ];
}
